<resources>
    <string name="app_name">Agenda</string>
    <string name="nome">Nome</string>
    <string name="telefone">telefone</string>
    <string name="e_mail">E-mail</string>
    <string name="salvar_o_aluno">Salvar o aluno</string>
    <string name="remover">remover</string>
    <string name="sobrenome">Sobrenome</string>
    <string name="telefone_fixo">Telefone fixo</string>
    <string name="telefone_celular">Telefone celular</string>
</resources>