<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/activity_formulario_aluno_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/nome"
            android:inputType="textCapWords"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/activity_formulario_aluno_sobrenome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/sobrenome"
            android:inputType="textCapWords"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/activity_formulario_aluno_telefone_fixo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/telefone_fixo"
            android:inputType="phone"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/activity_formulario_aluno_telefone_celular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/telefone_celular"
            android:inputType="phone"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/activity_formulario_aluno_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            tools:ignore="Autofill" />

    </LinearLayout>

    </ScrollView>
